--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+.igx-date-picker .igx-calendar__header {
+
+    background-color: red !important;
+  }
