--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,7 @@
-<p> Start page </p>
-<router-outlet></router-outlet>
+<div class="wrapper">
+    <div class="content">
+        <app-navbar></app-navbar>
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+</div>
