--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,3 +4,39 @@
 
     background-color: red !important;
   }
+
+.mat-button.mat-accent, .mat-icon-button.mat-accent, .mat-stroked-button.mat-accent {
+  color: #3f51b5; 
+}
+
+.carousel-indicators { 
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mat-fab.mat-accent, .mat-flat-button.mat-accent, .mat-mini-fab.mat-accent, .mat-raised-button.mat-accent {
+  background-color: #3f51b5;
+}
+   
+  /* li.carousel-slide{
+    height: 475px !important; 
+    height: auto !important;
+  }
+
+  ul.carousel-list {
+    height: 475px;
+  }
+
+  .carousel-slide-content {
+    height: 475px;
+  }
+
+  .carousel {
+    height: 475px;
+  }
+
+  .carousel-slide {
+    height: 475px;
+  }  */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
