Some updates for image editor component.

--- a/frontend/src/app/components/image-editor/image-editor.component.css
+++ b/frontend/src/app/components/image-editor/image-editor.component.css
@@ -18,3 +18,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.filters-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
