--- a/frontend/src/app/components/image-editor/image-editor.component.html
+++ b/frontend/src/app/components/image-editor/image-editor.component.html
@@ -15,6 +15,10 @@
       <img [src]="url">
     </div>
   </div>
+  <div class="remove-button-container" (click)="removeCurrentObj()">
+    Remove current object
+<!--    <button mat-button (click)="removeCurrentObj()">Delete current object</button>-->
+  </div>
   <div class="save-button-container">
     <button mat-button (click)="save()">Save</button>
   </div>
