--- a/frontend/src/app/pages/alluserspage/alluserspage.component.html
+++ b/frontend/src/app/pages/alluserspage/alluserspage.component.html
@@ -21,14 +21,14 @@
          <td mat-cell *matCellDef="let element"> {{element.status}} </td>
        </ng-container>
 
-       <ng-container matColumnDef="action">
-         <th mat-header-cell *matHeaderCellDef> Action </th>
-         <td mat-cell *matCellDef="let element"> 
-               <button *ngIf="element.status == 'active'" mat-raised-button color="primary" class="action-button" (click)="blockUser(element.id)">Block user</button>
-               <button *ngIf="element.status == 'banned'" mat-raised-button color="primary" class="action-button" (click)="unblockUser(element.id)">Unblock user</button>
-         </td>
-       </ng-container>
-    
+<!--       <ng-container matColumnDef="action">-->
+<!--         <th mat-header-cell *matHeaderCellDef> Action </th>-->
+<!--         <td mat-cell *matCellDef="let element"> -->
+<!--               <button *ngIf="element.status == 'active'" mat-raised-button color="primary" class="action-button" (click)="blockUser(element.id)">Block user</button>-->
+<!--               <button *ngIf="element.status == 'banned'" mat-raised-button color="primary" class="action-button" (click)="unblockUser(element.id)">Unblock user</button>-->
+<!--         </td>-->
+<!--       </ng-container>-->
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
